--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.11.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.6",
